Refactor solvers based on ingredients deltas to reduce code duplication